--- a/staRt/www/css/app_styles.css
+++ b/staRt/www/css/app_styles.css
@@ -498,27 +498,28 @@ input, textarea {
 .navTab {
   display: -webkit-flex;
   -webkit-flex: 1;
-  background-color: #3d6d84;
+  background-image: url("../img/nav/new/navTab-off.svg");
   background-image-size: 100% 100%;
+  background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   width: 10vw;
-  padding-top: 10%;
-  padding-bottom: 5%;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
   transition: width 0.5s ease-in-out; }
   .navTab.active {
-    color: #53C8E9;
-    background-color: #4ea1af;
+    color: white;
+    background-image: url("../img/nav/new/navTab-on.svg");
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
     z-index: 25;
     width: 11vw; }
 
 .navTabText {
-  margin: auto; }
+  margin: auto;
+  padding-top: 10%;
+  padding-bottom: 5%; }
 
 .nav-svg {
   height: 65px;
@@ -865,19 +866,43 @@ input, textarea {
   height: 16.66667vh;
   max-height: 16.66667vh; }
   .card-head .card-headBox {
+    position: relative;
     display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
     height: 12.5vh;
-    padding: 2em 2.5em;
     padding-bottom: 0.25em;
     color: #3D6D84;
     flex-direction: row nowrap;
     align-items: center; }
-  .card-head h1 {
-    font-size: 1.5em;
-    color: #3D6D84;
-    font-weight: 400; }
+    .card-head .card-headBox .card-closeRow {
+      position: relative;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-end;
+      align-items: flex-start;
+      height: 33%;
+      width: 100%;
+      z-index: 20; }
+      .card-head .card-headBox .card-closeRow button {
+        padding: 16px 32px;
+        border-radius: 10px; }
+    .card-head .card-headBox .card-titleRow {
+      position: relative;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: flex-start;
+      align-items: center;
+      height: 66%;
+      width: 100%;
+      padding: 0 2.5em; }
+      .card-head .card-headBox .card-titleRow h1 {
+        font-size: 1.5em;
+        color: #3D6D84;
+        font-weight: 400; }
 
-.card-navBox {
+.card-head .card-navBox {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
@@ -886,7 +911,7 @@ input, textarea {
   width: 100%;
   border-top: 2px solid #ace2e5;
   border-bottom: 2px solid #ace2e5; }
-  .card-navBox .pro_navitem {
+  .card-head .card-navBox .pro_navitem {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -897,11 +922,15 @@ input, textarea {
     font-weight: 400;
     border-top: 2px solid #ace2e5;
     border-bottom: 2px solid #ace2e5; }
-    .card-navBox .pro_navitem.pro_navitem--active {
+    .card-head .card-navBox .pro_navitem.pro_navitem--active {
       height: 4.16667vh;
       font-weight: 700;
       border-top: 2px solid #3D6D84;
       border-bottom: 2px solid #3D6D84; }
+
+.card-head .card-navBox--slp {
+  border-top: 2px solid #efbd88;
+  border-bottom: 2px solid #efbd88; }
 
 .card-content {
   position: relative;
@@ -942,49 +971,16 @@ input, textarea {
     padding: 1em 2em;
     width: 75%; }
 
-.r-btn {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-  align-items: center;
-  text-align: center;
-  width: auto;
-  margin: 0 1em;
-  margin-right: 1em;
-  padding: 0.5em 1.35em;
-  border-radius: 10px;
-  background-color: #ACE2E5;
-  border-bottom: 1px solid #A1D3D3;
-  border-right: 1px solid #A1D3D3;
-  cursor: pointer; }
-
-.r-btn:active {
-  background-color: #D7F4F3; }
-
-.r-btn .btn-text {
-  font-size: 1em;
-  line-height: 1.5;
-  font-weight: 600;
-  color: #7ab5b8;
-  text-decoration: none;
-  margin-right: 1em; }
-
-.r-btn i {
-  font-size: 2.5em; }
-
 .sexBtn-row {
   position: relative;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  width: 100%; }
+  width: 100%;
+  margin-top: 1em; }
   .sexBtn-row span {
-    font-size: 1.2em; }
-
-.sexBtn {
-  border-radius: 64px;
-  border: 1px solid #E8E8E8; }
+    font-size: 1.3em; }
 
 .tutorial-layout_view-container {
   position: relative;
