--- a/staRt/www/states/root/profiles/_profiles_styles.scss
+++ b/staRt/www/states/root/profiles/_profiles_styles.scss
@@ -136,6 +136,7 @@
 	box-shadow:2px 2px 4px rgba(0,0,0,0.25);
 }
 
+
 .card-head { // height: $row-h;
 	position: relative;
 	display: flex;
@@ -145,27 +146,58 @@
 	max-height: $row-h;
 	//border: 1px solid red;
 
-	.card-headBox {
+	.card-headBox { 
+		position: relative;
 		display: flex;
+		flex-flow: column nowrap;
+		justify-content: space-between;
+		align-items: flex-start;
 		height: $row-h * 0.75;
-		padding: 2em 2.5em;
 		padding-bottom: 0.25em;
 		color: $c-text-main;
 		flex-direction: row nowrap;
 		align-items: center;
-		//border: 1px solid red;
-	}
-	h1 {
+		//border: 1px solid blue;
 
-		font-size: 1.5em;
-		color: $c-text-main;
-		font-weight: 400;
-	}
+		.card-closeRow {
+			position: relative;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-end;
+			align-items: flex-start;
+			height: 33%;
+			width: 100%;
+			z-index: 20;
+			//border: 1px solid lightBlue;
+
+			button {
+				padding: 16px 32px;
+				border-radius: 10px;
+			}
+		}
+
+		.card-titleRow {
+			position: relative;
+			display: flex;
+			flex-flow: row nowrap;
+			justify-content: flex-start;
+			align-items: center;
+			height: 66%;
+			width: 100%;
+			padding: 0 2.5em;
+			//border: 1px solid lightBlue;
+			
+			h1 {
+				font-size: 1.5em;
+				color: $c-text-main;
+				font-weight: 400;
+			}
+
+		}
+	} // .card-headBox 	
 } // end card-head
 
-.message-bold {}
-
-.card-navBox {
+.card-head .card-navBox {
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-around;
@@ -194,7 +226,10 @@
 			border-bottom: 2px solid $c-text-main;	
 		}
 	}
-
+}
+.card-head .card-navBox--slp {
+	border-top: 2px solid $c-bronze-500;
+	border-bottom: 2px solid $c-bronze-500;
 }
 
 // -------------------------------------------
@@ -214,39 +249,39 @@
 // ------------------------------
 // Sorry these are divs. Its tedious to overwrite ionic's styles. If this causes probs, just let me know.
 
-.r-btn {
-	display: flex;
-	flex-flow: row nowrap;
-	justify-content: space-around;
-	align-items: center;
-	text-align: center;
-	width: auto;
-	margin: 0 1em;
-	margin-right: 1em;
-	padding: 0.5em 1.35em;
+// .r-btn {
+// 	display: flex;
+// 	flex-flow: row nowrap;
+// 	justify-content: space-around;
+// 	align-items: center;
+// 	text-align: center;
+// 	width: auto;
+// 	margin: 0 1em;
+// 	margin-right: 1em;
+// 	padding: 0.5em 1.35em;
 
-	border-radius: 10px;
-	background-color: #ACE2E5;
-	border-bottom: 1px solid #A1D3D3;
-	border-right: 1px solid #A1D3D3;
-	cursor: pointer;
-}
-.r-btn:active {
-	background-color: #D7F4F3;
-}
+// 	border-radius: 10px;
+// 	background-color: #ACE2E5;
+// 	border-bottom: 1px solid #A1D3D3;
+// 	border-right: 1px solid #A1D3D3;
+// 	cursor: pointer;
+// }
+// .r-btn:active {
+// 	background-color: #D7F4F3;
+// }
 
-.r-btn .btn-text {
-	font-size: 1em;
-	line-height: 1.5;
-	font-weight: 600;
-	color: $c-text-subtle;
-	text-decoration: none;
-	margin-right: 1em;
-}
+// .r-btn .btn-text {
+// 	font-size: 1em;
+// 	line-height: 1.5;
+// 	font-weight: 600;
+// 	color: $c-text-subtle;
+// 	text-decoration: none;
+// 	margin-right: 1em;
+// }
 
-.r-btn i {
-	font-size: 2.5em;
-}
+// .r-btn i {
+// 	font-size: 2.5em;
+// }
 
 .sexBtn-row {
 	position: relative;
@@ -255,18 +290,15 @@
 	justify-content: space-between;
 	align-items: center;
 	width: 100%;
+	margin-top: 1em;
 	//border: 1px solid #c2c2c2;
 
 	span {
-		font-size: 1.2em;
+		font-size: 1.3em;
 	}
 }
-.sexBtn {
-	border-radius: 64px;
-	// border-left: 1px solid #F0F0F0;
-	// border-right: 1px solid #F0F0F0;
-	border: 1px solid #E8E8E8; //whiteSmoke;
-}
+
+
 
 // .profiles-contentBox .radio-content .item-content {
 // 	padding-right: 0px;
@@ -276,7 +308,6 @@
 // .profiles-contentBox .radio-content span {
 // 	margin-right: 64px;
 // }
-
 
 
 // p.display-name {
